Add basic framework.  Update CI actions
